--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,3 +1,6 @@
+<script src="//maps.google.com/maps/api/js?key=AIzaSyDH0DF9eFyUF0dkYoxI5jjesFD_aXYKGtw"></script>
+<script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
+<script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
 <h2>Results form Twitter for <%= @htname %> tag</h2>
 <table>
   <tr>
@@ -6,7 +9,7 @@
     <td>Total Retweets</td>
     <td>Total Likes</td>
   </tr>
-<% $client.search(@htname, result_type: "recent").take(100).collect do |tweet| %>
+<% $client.search(@htname, result_type: "recent").take(10).collect do |tweet| %>
   <tr>
     <td><%= "#{tweet.user.screen_name}" %></td> 
     <td><%= "#{tweet.text}" %> </td>
@@ -24,10 +27,24 @@
   </tr>
   <% @hashtag_posts.each do |post| %>
   <tr>
-    <td><%= post.user.username %></td>
+    <td><%= post.user.username %></td>  
     <td><%= post.caption.text %></td>
   </tr>
   <%  end %>
 </table>
 
+
 <%= link_to "Search New Hashtag", new_hashtag_path %>
+
+<div style='width: 800px;'>
+  <div id="map" style='width: 800px; height: 400px;'></div>
+</div>
+
+<script type="text/javascript">
+  handler = Gmaps.build('Google');
+handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+  markers = handler.addMarkers(<%=raw @hash.to_json %>);
+  handler.bounds.extendWith(markers);
+  handler.fitMapToBounds();
+});
+</script>
